# taskBot

./: .gitignore  setup.cfg
bot/: bot_airtable.py  bot_config.py  bot_logging.py  bot_main.py  bot_telegram.py
