[metadata]
name = gdrtTaskBot
version = attr: bot.bot_config.CURRENT_BOT_VERSION
author = GDRT
author_email = tylergibbsvol@gmail.com
description = Bot for Volunteers
long_description = file: README.txt
long_description_content_type = text/markdown
url = https://example.com
project_urls =
    Bug Tracker = https://example.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.8
install_requires =
    logging
    telegram
    pyairtable

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    oibotvol = bot.bot_main:main

